environments/dev/apps/app-inventory/services/inventory/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  annotations:
      app.openshift.io/vcs-uri: https://github.com/globex-retail/inventory.git?ref=HEAD
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/part-of: app-inventory
    app.openshift.io/runtime: quarkus
  name: inventory
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory
      app.kubernetes.io/part-of: app-inventory
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: inventory
        app.kubernetes.io/part-of: app-inventory
    spec:
      containers:
      - image:                                    "quay.io/globex/inventory:main-bf9a0c7dc451165f7d3c5c557c19062b15df1eb1"
        imagePullPolicy: Always
        name: inventory
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
