environments/dev/apps/app-inventory/services/inventory/base/config/200-dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/part-of: app-inventory
  name: postgresql
  namespace: dev
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: postgresql
status:
  loadBalancer: {}
