environments/dev/apps/app-inventory/services/inventory/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: cart-undefined
  namespace: dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: inventory
    weight: 100
  wildcardPolicy: None
